--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -87,7 +87,7 @@
                           La diffusion exclusive des imprimés du Plan Comptable Général Congolais.
                         </li>
                       </ul>
-                      <a href="#" class="btn">Savoir plus</a>
+                      <a href="https://cpcc.silasmas.com/" class="btn">Savoir plus</a>
                     </div>
                   </div>
                 </div>
@@ -195,7 +195,7 @@
                 <p>
                   Au cours de la première journée du séminaire, le Secrétaire Général du CPCC, le Professeur William MBUYAMBA KALOMBAYI, a axé son intervention sur le traitement comptable des provisions et des amortissements en système comptable OHADA et en normes internationales IFRS.
                 </p>
-                <a href="#" class="btn">Savoir plus</a>
+                <a href="https://cpcc.silasmas.com/" class="btn">Savoir plus</a>
               </div>
               <hr>
               <footer>
