--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -178,7 +178,7 @@
                       </a>
                     </div>
                   </div>
-                  <a href="#" class="btn">Savoir plus</a>
+                  <a href="https://cpcc.silasmas.com/" class="btn">Savoir plus</a>
                 </div>
               </div>
               <div class="block-sem">
