--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                           La diffusion exclusive des imprimés du Plan Comptable Général Congolais.
                         </li>
                       </ul>
-                      <a href="https://cpcc.silasmas.com/" class="btn">Savoir plus</a>
+                      <a target="blank" href="https://cpcc.silasmas.com/actualites.html" class="btn">Savoir plus</a>
                     </div>
                   </div>
                 </div>
@@ -178,7 +178,7 @@
                       </a>
                     </div>
                   </div>
-                  <a href="https://cpcc.silasmas.com/" class="btn">Savoir plus</a>
+                  <a  target="blank" href="https://cpcc.silasmas.com/actualites.html" class="btn">Savoir plus</a>
                 </div>
               </div>
               <div class="block-sem">
@@ -186,10 +186,6 @@
                   VI. SEMINAIRE SUR L’ARRETE DES COMPTES ANNUELS <br> DE L’EXERCICE  CLOS AU 31 
                   DECEMBRE 2022.
                 </h2>
-                
-                <p>
-<img src=""/>
-                </p>
                 <p>
                   Dans le souci de respecter la tradition, le CPCC accompagne les entités dans la clôture de leurs comptes annuels afin de les aider à éviter d’éventuelles pertes de données, des pièges ainsi que des erreurs comptables et à surmonter les difficultés rencontrées.
                 </p>
@@ -199,7 +195,7 @@
                 <p>
                   Au cours de la première journée du séminaire, le Secrétaire Général du CPCC, le Professeur William MBUYAMBA KALOMBAYI, a axé son intervention sur le traitement comptable des provisions et des amortissements en système comptable OHADA et en normes internationales IFRS.
                 </p>
-                <a href="https://cpcc.silasmas.com/" class="btn">Savoir plus</a>
+                <a  target="blank" href="https://cpcc.silasmas.com/actualites.html" class="btn">Savoir plus</a>
               </div>
               <hr>
               <footer>
